--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,10 @@ edition = "2018"
 
 [dependencies]
 serenity = { version = "0.9.0-rc.0" }
+nsvg = "0.5.1"
 image = "0.23.8"
-imageproc = "0.21.0"
-rusttype = "0.9.2"
 d20 = "0.1.0"
 env_logger = "0.7.1"
 kankyo = "0.3"
 log = "0.4"
-lazy_static = "1.4.0"
 tokio = { version = "0.2", features = ["macros"] }
