--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,16 @@ edition = "2018"
 
 [dependencies]
 serenity = { version = "0.9.0-rc.0" }
-nsvg = "0.5.1"
+resvg = "0.11.0"
+usvg = "0.11.0"
+lazy_static = "1.4.0"
+futures = "0.3.5"
 image = "0.23.8"
 d20 = "0.1.0"
 env_logger = "0.7.1"
 kankyo = "0.3"
+base64 = "0.12.3"
+png = "0.16.7"
+indicatif = "0.15.0"
 log = "0.4"
 tokio = { version = "0.2", features = ["macros"] }
