--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ usvg = "0.11.0"
 lazy_static = "1.4.0"
 futures = "0.3.5"
 image = "0.23.8"
-d20 = "0.1.0"
+caith = "1.0.0"
 env_logger = "0.7.1"
 kankyo = "0.3"
 base64 = "0.12.3"
