--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,21 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies.serenity]
+version = "0.9.0-rc.0"
+default-features = false
+features = [
+	"builder",
+	"cache",
+	"client",
+	"gateway",
+	"http",
+	"model",
+	"utils",
+	"rustls_backend"
+]
+
 [dependencies]
-serenity = { version = "0.9.0-rc.0" }
 resvg = "0.11.0"
 usvg = "0.11.0"
 lazy_static = "1.4.0"
@@ -22,3 +35,4 @@ indicatif = "0.15.0"
 log = "0.4"
 tokio = { version = "0.2", features = ["macros"] }
 regex = "1.3.9"
+clap = "2.33.3"
